--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity_resultats" />
+        <activity android:name=".question1" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +21,7 @@
         <activity android:name=".ChooseMiniGame" />
         <activity android:name=".Game1" />
         <activity android:name=".Game2" />
-        <activity android:name=".Game3"></activity>
+        <activity android:name=".Game3" />
     </application>
 
 </manifest>
